[gd_scene load_steps=4 format=3 uid="uid://ccqm8s3n7iufw"]

[ext_resource type="Theme" uid="uid://snspl6w3n2t" path="res://Resources/maintheme.tres" id="1_0jwe8"]
[ext_resource type="Script" path="res://Scenes/HUD/hud.gd" id="1_ljnga"]
[ext_resource type="FontFile" uid="uid://d20rr835cklah" path="res://Assets/fibberish.ttf" id="2_uf77i"]

[node name="Hud" type="CanvasLayer" groups=["Hud"]]
script = ExtResource("1_ljnga")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0jwe8")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScoreLabel" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Score: 0"

[node name="BonusText" type="RichTextLabel" parent="Control/MarginContainer"]
visible = false
clip_contents = false
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_uf77i")
bbcode_enabled = true
text = "[wave amp=50.0 freq=5.0 connected=1][pulse freq=5.0 color=#FF0000 ease=-2.0][center]Close call!"
fit_content = true
scroll_active = false

[node name="GameOverScreen" type="MarginContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="Control/GameOverScreen"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/GameOverScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOverScreen/Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Control/GameOverScreen/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "GAME OVER"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Control/GameOverScreen/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Final Score:"

[node name="Highscore" type="Label" parent="Control/GameOverScreen/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Highscore:"

[node name="Label" type="Label" parent="Control/GameOverScreen/Panel/MarginContainer"]
layout_mode = 2
text = "Thanks for playing!"
horizontal_alignment = 1

[node name="TryAgainButton" type="Button" parent="Control/GameOverScreen/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Try Again"

[connection signal="pressed" from="Control/GameOverScreen/Panel/MarginContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
